--- a/webapp/src/ke/co/tawi/babblesms/server/persistence/maskcode/package.html
+++ b/webapp/src/ke/co/tawi/babblesms/server/persistence/maskcode/package.html
@@ -14,10 +14,10 @@ CONDITIONS OF ANY KIND, either express or implied.
 
 See the License for the specific language governing permissions and limitations 
 under the License. 
--->
+ -->
  
 <html>
 	<body>
-		Persistence for user message templates.
+		Persistence for sources (mask and shortcode).
 	</body>
 </html>
