Babble can send through SMS Gateway.

--- a/webapp/src/ke/co/tawi/babblesms/server/utils/package.html
+++ b/webapp/src/ke/co/tawi/babblesms/server/utils/package.html
@@ -18,6 +18,6 @@ under the License.
  
 <html>	
 	<body>
-		Utilities that are servlets.
+		Generic utilities that can be reused across the application.
 	</body>
 </html>
