Miscellaneous corrections including new database setup methodology.

--- a/webapp/src/ke/co/tawi/babblesms/server/utils/security/package.html
+++ b/webapp/src/ke/co/tawi/babblesms/server/utils/security/package.html
@@ -19,7 +19,7 @@ under the License.
 <html>
     <body>
         <div>
-            Javabeans that deal with user message templates.
+            Security utilities.
         </div>
     </body>
 </html>
