--- a/webapp/src/ke/co/tawi/babblesms/server/beans/geolocation/package.html
+++ b/webapp/src/ke/co/tawi/babblesms/server/beans/geolocation/package.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 
 <!--
 Copyright 2016 Tawi Commercial Services Ltd
@@ -17,7 +17,9 @@ under the License.
  -->
  
 <html>
-	<body>
-		Persistence for network/providers details.
-	</body>
+    <body>
+        <div>
+            Location based objects.
+        </div>
+    </body>
 </html>
