--- a/webapp/src/ke/co/tawi/babblesms/server/persistence/geolocation/package.html
+++ b/webapp/src/ke/co/tawi/babblesms/server/persistence/geolocation/package.html
@@ -18,6 +18,6 @@ under the License.
  
 <html>
 	<body>
-		Persistence for network/providers details.
+		Persistence for geolocation objects.
 	</body>
 </html>
